# barbox

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEBUGGING_PATTERNS.md  GETTING_STARTED.md  README.md  project.godot
BarBoxApp/: .editorconfig  (+12 more)
BarBoxServices/: .dockerignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  app.db  fly.staging.toml  fly.toml  pyproject.toml  test_diagnostic.py
BarBoxServices/agent_docs/: account-creation-flow.md  api-design-patterns.md  database-patterns.md  domain-model-reference.md  environment-modes.md  game-module-guide.md  sqlite-json-handling.md
BarBoxServices/alembic/: env.py
BarBoxServices/alembic/versions/: 1e51e5a9597e_index_box_session_event_type_session_id.py  abececed02c7_baseline_schema.py
BarBoxServices/deployment/: README.md  barbox-backend.service  barbox-frontend.service  barbox-gpu-performance.service  build-and-deploy.sh  cleanup-old-releases.sh  connect.sh  deploy.sh  get-version.sh  profile-remote.sh  set_gpu_performance.sh  start_all.sh  start_backend.sh  start_frontend.sh  stop_all.sh  update.sh
BarBoxServices/docs/: CI_CD_INTEGRATION_PLAN.md  FLY_IO_DEPLOYMENT_GUIDE.md  STRIPE_PAYMENT_INTEGRATION_PLAN.md
BarBoxServices/docs/architecture/: README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md
BarBoxServices/scripts/: dev-reset.sh  dev.sh  fly-check-secrets.sh  fly-deploy.sh  fly-sync-secrets.sh  lint.sh  seed-test-data.sh  test-backend.sh  test-isolated.sh  test.sh
BarBoxServices/src/bxctl/: CLAUDE.md  __init__.py  env.py  errors.py  registry.py  schemas.py  structures.py
BarBoxServices/src/bxctl/app/: CLAUDE.md  dependencies.py  main.py
BarBoxServices/src/bxctl/boxes/: router.py  schemas.py  service.py
BarBoxServices/src/bxctl/credits/: router.py  schemas.py  service.py
BarBoxServices/src/bxctl/db/: CLAUDE.md  __init__.py  connectivity.py  defs.py  service.py
BarBoxServices/src/bxctl/games/: CLAUDE.md  README.md  __init__.py  common.py  validation.py
BarBoxServices/src/bxctl/payments/: __init__.py  packs.py  router.py  service.py  webhook.py
BarBoxServices/src/bxctl/players/: router.py  schemas.py  service.py
BarBoxServices/src/bxctl/testing/: router.py  seeding.py
BarBoxServices/src/bxctl/web/: CLAUDE.md  auth.py  box.py  carrom.py  dependencies.py  game.py  machine_credits.py  main.py  mining.py  payments.py  player.py  racing.py  test.py
BarBoxServices/test/: README.md  account-creation-flow.hurl  carrom-game-flow.hurl  credit-purchase-flow.hurl  credits-management.hurl  eventservice-query.hurl  full-resource-flow-smoke-test.hurl  machine-credit-flow.hurl  mining-game-flow.hurl  racing-game-flow.hurl  session-architecture-test.hurl  username-availability.hurl
BarBoxServices/test/00-smoke/: full-resource-flow-smoke-test.hurl
BarBoxServices/test/01-unit/: box-registration.hurl  username-availability.hurl
BarBoxServices/test/02-feature/auth/: admin-authentication.hurl  auth-flow.hurl
BarBoxServices/test/03-integration/: account-creation-flow.hurl  account-operations.hurl  credit-operations.hurl  game-session-lifecycle.hurl  payment-error-responses.hurl  payment-webhook-flow.hurl  session-architecture-test.hurl
BarBoxServices/test/fixtures/: README.md  test_constants.py
BarBoxServices/test/integration/: account-operations.hurl  credit-operations.hurl  game-session-lifecycle.hurl
(+764 files in other folders)
