[project]
name = "bxctl"
version = "0.1.0"
description = "Barbox is a box in the bar"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "dramatiq[redis,watch]>=1.18.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "structlog>=25.4.0",
    "aiosqlite>=0.21.0",
    "pydantic-settings>=2.10.1",
    "pottery>=3.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ty>=0.0.1a16",
    "ruff>=0.12.5",
    "mypy>=1.17.0",
    "alembic>=1.16.4",
    "ipython>=9.4.0",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A002",  # shadowed builtin
    'D',     # XXX enable this!
    'D107',  # __init__ docstring
    'TD002', # TODO author
    'TD003', # TODO issue link
]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true
