[project]
name = "bxctl"
version = "0.1.0"
description = "Barbox is a box in the bar"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "dramatiq[redis,watch]>=1.18.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "alembic>=1.16.4",
    "structlog>=25.4.0",
    "aiosqlite>=0.21.0",
    "pydantic-settings>=2.10.1",
    "pottery>=3.0.1",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=5.0.0",
    "slowapi>=0.1.9",
    "phonenumbers>=8.13.0",
    "stripe>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ty>=0.0.1a16",
    "ruff>=0.12.5",
    "mypy>=1.17.0",
    "ipython>=9.4.0",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A002",  # shadowed builtin
    'D',     # XXX enable this!
    'D107',  # __init__ docstring
    'TD002', # TODO author
    'TD003', # TODO issue link
]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true
