[project]
name = "bxctl"
version = "0.1.0"
description = "Barbox is a box in the bar"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "sqlalchemy[asyncio]>=2.0.41",
    "alembic>=1.16.4",
    "structlog>=25.4.0",
    "aiosqlite>=0.21.0",
    "pydantic-settings>=2.10.1",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=5.0.0",
    "slowapi>=0.1.9",
    "phonenumbers>=8.13.0",
    "stripe>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    # ty is pre-1.0; keep the floor at the locked version so diagnostics stay reproducible
    "ty>=0.0.1a22",
    "ruff>=0.12.5",
    "ipython>=9.4.0",
]

[tool.ty.environment]
python-version = "3.13"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A002",  # shadowed builtin
    "D",     # module/class/function docstrings stay optional (decided, not deferred)
    "D107",  # __init__ docstring
    "TD002", # TODO author
    "TD003", # TODO issue link
    "COM812", # conflicts with the formatter (ruff's own recommendation)
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# Alembic's script directory is not a package by design (no __init__.py)
"alembic/**" = ["INP001"]
# Reference constants shared with Hurl/C# tests, not an importable package
"test/fixtures/**" = ["INP001"]

[tool.ruff.format]
docstring-code-format = true
